# temp-utils

./: .clang-format  .gitignore  CMakeLists.txt  Folder.DotSettings  basic_concepts.h  basic_concepts_test.cpp  basic_signal.cpp  basic_signal.h  basic_signal_test.cpp  cclocale.cpp  cclocale.h  compiler_features.h  compiler_features_test.cpp  cpp.hint  inline_first_storage.h  inline_first_storage.natvis  inline_first_storage_benchmark.cpp  inline_first_storage_test.cpp  inline_first_storage_tests.cpp  iterator_test.cpp  locale_test.cpp  long_integer.h  long_integer.natvis  long_integer_test.cpp  misc_utils.h  ostream_adaptor.h  ostream_adaptor_test.cpp  range_formatter.h  range_formatter_test.cpp  signal.h  signal_slot.h  signal_test.cpp  simd_traits.h  small_vector.h  small_vector.natvis  small_vector_benchmark.cpp  small_vector_test.cpp  small_vector_tests.cpp  static_warning.h  timer.h  (+19 more)
tmp/: signal_handler.cpp  signal_handler.hpp  signal_handler_test.cpp  signal_slot.cpp  signal_slot.hpp  signal_slot_test.cpp
